style: fixed trans id resources page spacing

--- a/styles/sass/partials/_trans-id.scss
+++ b/styles/sass/partials/_trans-id.scss
@@ -50,6 +50,9 @@ html.trans-id {
         padding: 10px;
         border-top: none;
         border-bottom: none;
+        .share-links {
+            margin-bottom: 0;
+        }
         .share-link {
             background-color: rgba($color2, 0.75) !important;
             border-color: $black !important;
@@ -82,6 +85,7 @@ html.trans-id {
     }
     footer {
         border-top: none; 
+        padding-top: 0;
     }
     hr {
         border-color: $black;
