--- a/styles/styles.css
+++ b/styles/styles.css
@@ -631,6 +631,9 @@ html.trans-id main {
   border-top: none;
   border-bottom: none;
 }
+html.trans-id main .share-links {
+  margin-bottom: 0;
+}
 html.trans-id main .share-link {
   background-color: rgba(181, 126, 155, 0.75) !important;
   border-color: #282b2c !important;
@@ -663,6 +666,7 @@ html.trans-id main .share-link:hover {
 }
 html.trans-id footer {
   border-top: none;
+  padding-top: 0;
 }
 html.trans-id hr {
   border-color: #282b2c;
